error3.log
    Checking fusion_lang v0.1.0 (C:\Projects\Fusion - Programming Language)
error[E0284]: type annotations needed
  --> src\lexer.rs:34:41
   |
34 |     #[regex("[0-9]+", |lex| lex.slice().parse().unwrap())]
   |                                         ^^^^^ cannot infer type of the type parameter `F` declared on the method `parse`
   |
   = note: cannot satisfy `<_ as FromStr>::Err == _`
help: consider specifying the generic argument
   |
34 |     #[regex("[0-9]+", |lex| lex.slice().parse::<F>().unwrap())]
   |                                              +++++

error[E0283]: type annotations needed
  --> src\lexer.rs:34:41
   |
 5 | #[derive(Logos, Debug, PartialEq, Clone)]
   |          ----- type must be known at this point
...
34 |     #[regex("[0-9]+", |lex| lex.slice().parse().unwrap())]
   |                             ------------^^^^^-----------
   |                             |           |
   |                             |           cannot infer type of the type parameter `F` declared on the method `parse`
   |                             return type was inferred to be `_` here
   |
   = note: multiple `impl`s satisfying `_: CallbackResult<'s, i64, Token>` found in the `logos` crate:
           - impl<'s, P, E, T> CallbackResult<'s, P, T> for FilterResult<P, E>
             where T: Logos<'s>, E: Into<<T as Logos<'s>>::Error>;
           - impl<'s, P, E, T> CallbackResult<'s, P, T> for Result<P, E>
             where T: Logos<'s>, E: Into<<T as Logos<'s>>::Error>;
           - impl<'s, P, T> CallbackResult<'s, P, T> for Option<P>
             where T: Logos<'s>;
           - impl<'s, P, T> CallbackResult<'s, P, T> for P
             where T: Logos<'s>;
           - impl<'s, P, T> CallbackResult<'s, P, T> for logos::Filter<P>
             where T: Logos<'s>;
help: consider specifying the generic argument
   |
34 |     #[regex("[0-9]+", |lex| lex.slice().parse::<F>().unwrap())]
   |                                              +++++

warning: unused variable: `name`
  --> src\semantic_analyzer\mod.rs:74:17
   |
74 |                 name,
   |                 ^^^^ help: try ignoring the field: `name: _`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0283, E0284.
For more information about an error, try `rustc --explain E0283`.
warning: `fusion_lang` (bin "fusion_lang") generated 1 warning
error: could not compile `fusion_lang` (bin "fusion_lang") due to 2 previous errors; 1 warning emitted
